<resources>
    <string name="app_name">RickAndMorty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="characters">Characters</string>
    <string name="character_detail">Character Detail</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="back">Back</string>
    <string name="character">Character</string>
    <string name="informations">Informations</string>
    <string name="episodes">Episodes</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="specie">Specie</string>
    <string name="origin">Origin</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="episode">episode</string>
    <string name="species">Species:</string>
    <string name="status_">Status:</string>
    <string name="gender_">Gender:</string>
    <string name="clear">CLEAR</string>
    <string name="filter">Filter</string>
    <string name="character_name">Character Name</string>
    <string name="apply">apply</string>
    <string name="alive">Alive</string>
    <string name="unknown">Unknown</string>
    <string name="dead">Dead</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="genderless">Genderless</string>
    <string name="ok">OK</string>
</resources>